# or_py

./: hello.py  pyproject.toml
change_detection/: DetectChange.py
data_manager/: app.py  data_manager.py  datamodel.py  filename_parser.py  viewer.py
sift/: img_matcher_align.py
src/: config.py
src/change_detection/: detect_changes_SSIM.py
src/data_manager/: app.py  data_manager.py  datamodel.py  filename_parser.py
src/data_manager/image_handler/: animator.py
src/image_alignment/: face_detection.py  img_matcher_brute.py  img_matcher_knn.py  img_matcher_ssim.py  r&d.ipynb  scipy_correlate.py  stitcher.py  stitcher_cv2.py  stitcher_module.py  webcam.py
tests/: test_datamodel.py
